Preparing for version 1.1 +added a backgroundworker, which reports progress in the progressbar +the ui does not lag anymore, when big files are being copied
Next commit should implement better error messages and a way to cancel the backup.

--- a/SimpleFileBackup/Resources/about.html
+++ b/SimpleFileBackup/Resources/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -83,14 +83,9 @@ Bugs, Questions, anything: salvenmarcel@gmail.com
 Known Issues
 <br>
 <br>
-Big ammounts of data can take a long time to copy. The program UI will not respond while it's working.
-That is because I didn't implement a background worker to do the job.
-<br>
 <br>
 This is my first publicly released program. I made it because I needed a tool to backup files to more locations at once and I wanted to code something in my summer holidays. I do not expect much from this program but any feedback or criticism is appreciated.
 <br>
-<br>
-16.08.2017
 </center>
 </body>
 </html>
