--- a/SimpleFileBackup.Windows/Resources/about.html
+++ b/SimpleFileBackup.Windows/Resources/about.html
@@ -30,19 +30,19 @@
         <b>Put files in given directory</b>
         <br>
         <br>
-        Copies the files into the selected directories.
+        Copies the files and folders into the selected directories.
         <br>
         <br>
         <b>Create a subfolder in directory</b>
         <br>
         <br>
-        Creates a subfolder in every given directory.
+        Creates a subfolder in every given directory with the provided name.
         <br>
         <br>
         <b>Create a .zip file in directory</b>
         <br>
         <br>
-        Create a .zip from the given files and copy it to every listed directory.
+        Create a .zip with the provided name from the given files and folders and copy it to every listed directory.
         <br>
         <br>
         <b>Name Folder/.zip</b>
@@ -59,10 +59,10 @@
         Adds your local date to the folder/.zip name in the format name_10-10-2010.
         <br>
         <br>
-        <b>Save Default File Paths & Save Default Backup Paths</b>
+        <b>Save Defaults</b>
         <br>
         <br>
-        Saves your file/backup locations as a list in a text file, that is located in the program folder. This list is loaded when the program is launched and inserted in the drop down list.
+        Saves your file/backup locations and settings to keep them for the next program start.
         <br>
         <br>
         <b>Save Custom File Paths & Save Custom Backup Paths</b>
